deploy/powerdns/service-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: powerdns

  labels:
    app: powerdns

spec:
  ports:
    - name: mariadb
      port: 3306
      protocol: TCP
      targetPort: 3306

  selector:
    app: mariadb
