deploy/powerdns/service-powerdns.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdns
  namespace: powerdns

  labels:
    app: powerdns

spec:
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: 53

    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: 53

    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081

  selector:
    app: powerdns
