deploy/powerdns/route-powerdns-webui.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  labels:
    app: powerdns-webui
  name: powerdns-webui
  namespace: powerdns

spec:
  port:
    targetPort: https

  tls:
    termination: passthrough
    
  to:
    kind: Service
    name: powerdns-webui
    weight: 100

  wildcardPolicy: None
