deploy/powerdns/route-powerdns.yaml
apiVersion: route.openshift.io/v1
kind: Route

metadata:
  labels:
    app: powerdns
  name: powerdns
  namespace: powerdns
spec:
  port:
    targetPort: 8081

  tls:
    termination: edge
    
  to:
    kind: Service
    name: powerdns
    weight: 100

  wildcardPolicy: None
